Fix overflow growing headers

--- a/src/fe-app/src/app/main/calendar/calendar.component.css
+++ b/src/fe-app/src/app/main/calendar/calendar.component.css
@@ -4,8 +4,7 @@
     margin-left: -0.8%;
     padding: 0;
     width: 101.5%;
-    height: 100%;
-    max-height: 100%;
+    height: 76.6vh;
 }
 
 
